--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -7,7 +7,7 @@
       
       <h1 class="display-4 mb-2 home-primary--main">Hello, world App!</h1>
       <p class="lead mb-3 home-primary--sub">This is an app, that I developed it as a test for Innocv Solutions.</p>
-      <a class="btn btn-primary btn-lg w-25 btn--animated" routerLink="list" role="button">Click to find out more</a>
+      <a class="btn btn-primary btn-lg w-25 btn--animated" routerLink="/user" role="button">Click to find out more</a>
 
     </div>
    
