--- a/src/app/user/user-detail/user-form/user-form.component.html
+++ b/src/app/user/user-detail/user-form/user-form.component.html
@@ -17,7 +17,7 @@
       </div>
       <div class="text-center">
         <button class="btn btn-primary mr-1" type="submit" [disabled]="!userForm.valid">Save User</button>
-        <button class="btn btn-success" type="button" (click)="newUser()">New User</button>
+        <button class="btn btn-success" type="button" (click)="newUser()">Reset</button>
       </div>
     </form>
   
