--- a/src/app/user/user-list/user-grid/user-grid.component.html
+++ b/src/app/user/user-list/user-grid/user-grid.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid table-responsive table-wrapper-scroll-y my-custom-scrollbar mt-5">
 
-  <h2 class="animated fadeIn">List of Users</h2>
-  <hr>
+  <h2 class="animated fadeIn mb-4">List of Users</h2>
+  
 
   <table class="table animated fadeIn">
 
