--- a/src/app/user/user-list/user-filter/user-filter.component.html
+++ b/src/app/user/user-list/user-filter/user-filter.component.html
@@ -1,1 +1,19 @@
-<p>user-filter works!</p>
+<div class="container-fluid">
+
+  <form [formGroup]="filterForm" (ngSubmit)="searchClick(filterForm.value)">
+    <h2 class="mb-4 mt-5">Filter Users</h2>
+
+    <div class="row">
+      <div class="form-group">
+        <label class="ml-3" for="name">Name</label>
+        <input class="form-control ml-3" type="text" id="name" formControlName="name">
+      </div>
+    </div>
+    <div>
+      <button class="btn btn-danger mr-1" type="button" (click)="reset()">Reset</button>
+      <button class="btn btn-primary" type="submit">Search</button>
+    </div>
+
+  </form>
+
+</div>
