--- a/src/app/user/user-list/user-filter/user-filter.component.html
+++ b/src/app/user/user-list/user-filter/user-filter.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container-fluid animated fadeIn">
 
   <form [formGroup]="filterForm" (ngSubmit)="searchClick(filterForm.value)">
     <h2 class="mb-4 mt-5">Filter Users</h2>
