Filter works with a pipe

--- a/src/app/user/user-list/user-filter/user-filter.component.html
+++ b/src/app/user/user-list/user-filter/user-filter.component.html
@@ -17,3 +17,20 @@
   </form>
 
 </div>
+
+<!-- <div class="container-fluid animated fadeIn">
+
+  <h2 class="mb-4 mt-5">Filter Users</h2>
+
+  <div class="row">
+    <div class="form-group">
+      <label class="ml-3" for="search-text">Search Name</label>
+      <input class="form-control ml-3" type="text" [(ngModel)]="filterUser" id="name" >
+    </div>
+  </div>
+  <div>
+    <button class="btn btn-danger mr-1" type="button">Reset</button>
+    <button class="btn btn-primary" type="submit">Search</button>
+  </div>
+
+</div> -->
