--- a/src/app/user/user-list/user-list.component.html
+++ b/src/app/user/user-list/user-list.component.html
@@ -1,5 +1,5 @@
 
-<app-user-filter (searchUser)="search($event)"></app-user-filter>
+<!-- <app-user-filter (searchUser)="search($event)"></app-user-filter> -->
 
 <app-user-grid [users]="users" (delete)="delete($event)" (edit)="editUser($event)"></app-user-grid>
 
