--- a/src/app/user/user-list/user-grid/user-grid.component.html
+++ b/src/app/user/user-list/user-grid/user-grid.component.html
@@ -1,6 +1,12 @@
 <div class="container-fluid table-responsive table-wrapper-scroll-y my-custom-scrollbar mt-5">
 
   <h2 class="animated fadeIn mb-4">List of Users</h2>
+
+  <div>
+    <div>
+      <input type="text" [(ngModel)]="filterUser" placeholder="Search..." class="search" />
+    </div>
+  </div>
   
 
   <table class="table animated fadeIn">
@@ -14,7 +20,7 @@
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let user of users; let i = index">
+      <tr *ngFor="let user of users | filter:filterUser; let i = index">
         <th scope="row">{{i + 1}}</th>
         <td>{{user.name}}</td>
         <td>{{user.birthdate | date:'dd/MM/y'}}</td>
