--- a/src/app/user/user-list/user-grid/user-grid.component.html
+++ b/src/app/user/user-list/user-grid/user-grid.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid table-responsive table-wrapper-scroll-y my-custom-scrollbar mt-5">
 
-  <h2 class="animated fadeIn mb-4">List of Users</h2>
+  <h2 class="animated fadeIn mb-4">{{'list.title' | translate}}</h2>
 
   <div>
     <div>
@@ -13,10 +13,10 @@
 
     <thead class="thead-light">
       <tr>
-        <th scope="col">Order</th>
-        <th scope="col">Name</th>
-        <th scope="col">Birthdate</th>
-        <th scope="col">Tools</th>
+        <th scope="col">{{'list.opt1' | translate}}</th>
+        <th scope="col">{{'list.opt2' | translate}}</th>
+        <th scope="col">{{'list.opt3' | translate}}</th>
+        <th scope="col">{{'list.opt4' | translate}}</th>
       </tr>
     </thead>
     <tbody>
