--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -6,8 +6,8 @@
     <div class="col text-center">
       
       <h1 class="display-4 mb-2 home-primary--main">Hello, world App!</h1>
-      <p class="lead mb-3 home-primary--sub">This is an app, that I developed it as a test for Innocv Solutions.</p>
-      <a class="btn btn-primary btn-lg w-25 btn--animated" routerLink="/user" role="button">Click to find out more</a>
+      <p class="lead mb-3 home-primary--sub">{{'home.text1' | translate}}</p>
+      <a class="btn btn-primary btn-lg w-25 btn--animated" routerLink="/user" role="button">{{'home.text2' | translate}}</a>
 
     </div>
    
