--- a/src/app/user/user-detail/user-form/user-form.component.html
+++ b/src/app/user/user-detail/user-form/user-form.component.html
@@ -3,21 +3,21 @@
   <div class="container animated fadeIn">
   
     <form [formGroup]="userForm" (ngSubmit)="saveForm(userForm.value)">
-      <h2 class="mb-4 mt-5 text-center">Register</h2>
+      <h2 class="mb-4 mt-5 text-center">{{'form.title' | translate}}</h2>
 
       <div class="row flex-column mb-5">
         <div class="form-group">
-          <label for="name">Name</label>
+          <label for="name">{{'form.name' | translate}}</label>
           <input class="form-control " type="text" id="name" formControlName="name">
         </div>
         <div class="form-group">
-          <label for="birthdate">Birthdate</label>
+          <label for="birthdate">{{'form.birthdate' | translate}}</label>
           <input class="form-control " type="date" id="birthdate" name="birthdate" formControlName="birthdate">
         </div>
       </div>
       <div class="text-center">
-        <button class="btn btn-primary mr-1" type="submit" [disabled]="!userForm.valid">Save User</button>
-        <button class="btn btn-success" type="button" (click)="newUser()">Reset</button>
+        <button class="btn btn-primary mr-1" type="submit" [disabled]="!userForm.valid">{{'form.btn1' | translate}}</button>
+        <button class="btn btn-success" type="button" (click)="newUser()">{{'form.btn2' | translate}}</button>
       </div>
     </form>
   
