--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -7,7 +7,7 @@
       
       <h1 class="display-4 mb-2 home-primary--main">Hello, world App!</h1>
       <p class="lead mb-3 home-primary--sub">{{'home.text1' | translate}}</p>
-      <a class="btn btn-primary btn-lg w-25 btn--animated" routerLink="/user" role="button">{{'home.text2' | translate}}</a>
+      <a class="btn btn-primary btn-lg btn--animated" routerLink="/user" role="button">{{'home.text2' | translate}}</a>
 
     </div>
    
