--- a/src/app/user/user-detail/user-form/user-form.component.scss
+++ b/src/app/user/user-detail/user-form/user-form.component.scss
@@ -19,4 +19,42 @@ form {
   width: 50%;
 }
 
+// Media queries
+
+// Small devices
+@media (max-width: 576px) {
+  form {
+    width: 100%;
+    height: 60%;
+    border: none;
+  }
+
+  .row {
+    width: auto;
+  }
+  
+}
+
+// Medium devices
+@media (max-width: 768px) {
+  form {
+    width: 70%;
+    height: 80%;
+  }
+}
+
+// Large devices
+@media (max-width: 992px) {
+  form {
+    height: 50%;
+  }
+}
+
+// Extra Large devices
+@media (max-width: 1200px) {
+  form {
+    height: 65%;
+  }
+}
+
 
